JM202207X  新增拓展功能：标识管理
* 标识管理：应用场景全局唯一标识管理，以区分不同业务线的ID和Code
* 数据源-链接数据库：jeemodel_idcode
* 场景标识-编码（36进制，最大46655）
* 更新标识码的SQL信息
* AccessibleObject.isAccessible 和 AccessibleObject.canAccess true
* JDK 11 方法 AccessibleObject.isAccessible 和 AccessibleObject.canAccess
* 支持JDK11
* 新增备注
* 调整数据字典
* 统一标识编码使用场景